# TaskForge

./: .env.example  .gitignore  AGENTS.md  README.en.md  README.md  docker-compose.yml  pnpm-lock.yaml
.github/workflows/: ci.yml  runner.yml
apps/api/: package.json
apps/api/scripts/: test-gitlab.ts
apps/api/src/auth/: jwt-auth.guard.ts
apps/api/src/common/: redis.service.ts
apps/api/src/repositories/: gitlab.provider.ts  provider.port.ts  repositories.constants.ts  repositories.controller.ts  repositories.module.ts  repositories.service.ts
apps/api/src/runner/: runner.controller.ts  runner.module.ts  runner.service.ts
apps/api/src/sessions/: sessions.controller.ts  sessions.service.ts
apps/api/src/workitems/: workitems.controller.ts  workitems.service.ts
apps/web/: Dockerfile  package.json  tailwind.config.js
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/sessions/[sessionId]/: page.tsx
apps/web/src/components/: auth-status.tsx  edit-work-item-form.tsx  repository-connect-form.tsx  repository-list.tsx  runner-settings.tsx  session-generative-ui.tsx  work-item-comments.tsx  work-item-header.tsx  work-item-sessions.tsx
apps/web/src/components/session-steps/: file-change-step.tsx  verification-step.tsx
apps/web/src/lib/: api.ts  types.ts
apps/worker/src/processors/: outbox.processor.ts
crates/runner-core/: Cargo.toml
crates/runner-core/src/: acp_host.rs  agent_discovery.rs  agent_host.rs  lib.rs  platform.rs
crates/runner/src/: main.rs
docs/: v0.1_prd.md  v0.1_technical_design.md
(+3 files in other folders)
